syntax = "proto3";

package messaging;

service GuploadService {
        rpc Upload(stream Chunk) returns (UploadStatus) {}
}

message Chunk {
  oneof data {
        bytes Content = 1;
        FileInfo Info = 2;
      }
}

message FileInfo {
  string FileType = 1;
}

enum UploadStatusCode {
        Unknown = 0;
        Ok = 1;
        Failed = 2;
}

message UploadStatus {
        string Message = 1;
        UploadStatusCode Code = 2;
}
